<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:seekbarpref="http://schemas.android.com/apk/res-auto">
	<Preference android:title="@string/prefs_TTSSettings" >
		<intent android:action="com.android.settings.TTS_SETTINGS"
			android:launchMode="singleInstance" />
	</Preference>
	<org.txt.to.audiofile.SeekBarPreferenceBase
	    android:key="seekBarPreference"
	    android:title="@string/seekBar_dialog_title"
	    android:dialogTitle="@string/seekBar_dialog_title"
	    android:summary="@string/seekBar_summary"
	    android:persistent="true"
	    android:defaultValue="100"
	    seekbarpref:minValue="25"
	    seekbarpref:maxValue="400" />
	<org.txt.to.audiofile.SeekBarPreferencePitch
	    android:key="seekBarPreferencePitch"
	    android:title="@string/seekBarPitch_dialog_title"
	    android:dialogTitle="@string/seekBarPitch_dialog_title"
	    android:summary="@string/seekBarPitch_summary"
	    android:persistent="true"
	    android:defaultValue="10"
	    seekbarpref:minValue="1"
	    seekbarpref:maxValue="19" />
	<CheckBoxPreference
	    android:key="pref_maxPause"
	    android:title="@string/enable_maxPause"
	    android:summaryOff="@string/maxPause_descroff"
		android:summaryOn="@string/maxPause_descron"
	    android:defaultValue="false" />
	<org.txt.to.audiofile.SeekBarPreferencePause
	    android:key="seekBarPreferencePause"
	    android:title="@string/seekBarPause_dialog_title"
	    android:dialogTitle="@string/seekBarPause_dialog_title"
	    android:summary="@string/seekBarPause_summary"
	    android:dependency="pref_maxPause"
	    android:persistent="true"
	    android:defaultValue="5"
	    seekbarpref:minValue="0"
	    seekbarpref:maxValue="20" />
	<org.txt.to.audiofile.RegexPreference
	    android:key="regexPreference"
	    android:title="@string/regex_dialog_title"
	    android:dialogTitle="@string/regex_dialog_title"
	    android:summary="@string/regex_summary"
	    android:persistent="true"
	    android:defaultValue="0" />
    <ListPreference
        android:key="pref_audioEncodingType"
        android:summary="@string/pref_audioEncodingType_summary"
        android:title="@string/pref_audioEncodingType"
        android:dialogTitle="@string/pref_audioEncodingType_dtitle"
        android:entries="@array/pref_audioEncodingType_entries"
        android:entryValues="@array/pref_audioEncodingType_values"
        android:defaultValue="@string/pref_audioEncodingType_default" />
    <ListPreference
        android:key="pref_mode"
        android:summary="@string/pref_mode_summary"
        android:title="@string/pref_mode"
        android:dialogTitle="@string/pref_mode_dtitle"
        android:entries="@array/pref_mode_entries"
        android:entryValues="@array/pref_mode_values"
        android:defaultValue="@string/pref_mode_default" />
    <EditTextPreference
        android:key="pref_audioParts"
        android:summary="@string/pref_audioParts_summary"
        android:title="@string/pref_audioParts"
        android:dialogTitle="@string/pref_audioParts_dtitle"
		android:inputType="number"
        android:defaultValue="10" />
    <EditTextPreference
        android:key="pref_outputTemplate"
        android:summary="@string/pref_outTemplate_title_summary"
        android:title="@string/pref_outTemplate_title"
        android:dialogTitle="@string/pref_outTemplate_title_dtitle"
        android:defaultValue="output_" />
	<CheckBoxPreference
		android:key="pref_checkbox"
		android:summaryOff="@string/pref_descroff"
		android:summaryOn="@string/pref_descron"
		android:title="@string/pref_checkBoxTitle" />
	<CheckBoxPreference
		android:key="pref_notifsound"
		android:summaryOff="@string/pref_notifsound_descroff"
		android:summaryOn="@string/pref_notifsound_descron"
		android:title="@string/pref_notifsound__checkBoxTitle" />
	<ListPreference
        android:key="pref_theme"
        android:summary="@string/pref_theme_title_summary"
        android:title="@string/pref_theme_title"
        android:dialogTitle="@string/pref_theme_title_dtitle"
        android:entries="@array/pref_theme_entries"
        android:entryValues="@array/pref_theme_values"
        android:defaultValue="1" />
</androidx.preference.PreferenceScreen>