<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
 <androidx.appcompat.widget.Toolbar
	android:id="@+id/fa_toolbar"
	android:layout_width="match_parent"
	android:layout_height="?attr/actionBarSize"
	android:background="?attr/colorPrimary"
	android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
	app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ListView
        android:id="@+id/files_ListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/filesStatus_TextView"
        android:layout_below="@+id/files_llbox"
        android:divider="@android:color/transparent"
        android:dividerHeight="5dp" >

    </ListView>
    
    <TextView
        android:id="@+id/filesStatus_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/filesEmpty_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/files_empty"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/files_llbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/filesDir_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/files_dirpath_append"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/filesFile_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/files_filepath_append"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

</RelativeLayout>
</LinearLayout>